--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "deployqb": "^2.1.1",
+    "quickbase": "^5.0.23",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-loading-overlay-nextgen": "^1.2.9",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run build-dist",
+    "build-dist": "cd build && cp -R static/js/main*.js main.js && cp -R static/js/453*.js main1.js && cp -R  static/css/main*.css main.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
